# braindump

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  go.mod  package-lock.json  package.json  tsconfig.json  tsup.config.ts
.claude/agent-memory-local/robust-test-writer/: MEMORY.md  bugs_found.md  test_patterns.md
.claude/agents/: robust-test-writer.md
.github/workflows/: ci.yaml  rust.yml
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/braindump/android/: BootReceiver.kt  BraindumpApp.kt  CaptureActivity.kt  CaptureTileService.kt  SettingsActivity.kt
android/app/src/main/kotlin/com/braindump/android/data/: AppContainer.kt  AppDatabase.kt  CaptureParser.kt  QueueEntry.kt  SyncRepository.kt  TodoEntity.kt
android/app/src/main/kotlin/com/braindump/android/net/: ApiClient.kt  BraindumpApi.kt
android/app/src/main/kotlin/com/braindump/android/sync/: SyncScheduler.kt  SyncWorker.kt
android/app/src/main/res/drawable/: ic_capture.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: data_extraction_rules.xml
android/gradle/: libs.versions.toml
cmd/debug/: main.go
cmd/server/: main.go
cmd/todo/: main.go
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: capture.rs  lib.rs  metrics.rs  model.rs  parser.rs  stale.rs  status.rs  storage.rs  sync.rs  tags.rs  weekly.rs
crates/desktop/: Cargo.toml  tauri.conf.json
crates/desktop/capabilities/: default.json
crates/desktop/src/: dashboard.rs  main.rs  sync_client.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs
data/: tags.yaml.example
docs/: api.md  capture-syntax.md  cli-help.md  file-format.md  plan-v2.md
internal/api/: api_test.go  handlers.go  router.go
internal/cli/: capture.go  cli_test.go  delete.go  done.go  dump.go  edit.go  list.go  move.go  picker.go  print.go  root.go  stale.go  tag.go
internal/core/: core_test.go  id.go  info.go  logger.go  stale.go  store.go  tags.go  todo.go
internal/printer/: celebration.go  celebration_test.go  config.go  config_test.go  debug.go  escpos.go  escpos_test.go  fun.go  fun_test.go  hardware_test.go  receipt.go  receipt_test.go
scripts/: gen-icon.py  setup-printer.sh  smoke-launch.sh
scripts/receipt-encoder/: encode.js  package-lock.json  package.json
src/: bootstrap.ts  config.ts
src/cli/: capture.ts  done.ts  index.ts  init.ts  list.ts  service.ts  update.ts
src/core/: db.ts  id.ts  info.ts  linear.ts  models.ts  parser.ts  stale.ts  store.ts  sync.ts  tags.ts
src/printer/: celebration.ts  config.ts  driver.ts  fun.ts  receipt.ts
src/server/: handlers.ts  index.ts  routes.ts
tests/cli/: capture.test.ts  done.test.ts  list.test.ts
tests/core/: db.test.ts  id.test.ts  info.test.ts  linear.test.ts  models.test.ts  parser.test.ts  stale.test.ts  store.test.ts  sync.test.ts  tags.test.ts
tests/integration/: capture-flow.test.ts
tests/printer/: fun.test.ts  receipt.test.ts
tests/server/: handlers.test.ts
