[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/desktop",
    "crates/server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
