[package]
name = "braindump-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "braindump-cli"
path = "src/main.rs"

[dependencies]
braindump-core = { path = "../core" }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
