[package]
name = "braindump-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "braindump-desktop"
path = "src/main.rs"

[dependencies]
braindump-core = { path = "../core" }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
